Fix: Update nested list spacing

--- a/packages/react/src/components/List/List.module.css
+++ b/packages/react/src/components/List/List.module.css
@@ -9,3 +9,7 @@
 li > .list {
   margin-top: var(--fds-spacing-2);
 }
+
+.list .listItem {
+  margin-top: var(--fds-spacing-2);
+}
